src/test/ui/closure_context/issue-42065.stderr
error[E0382]: use of moved value: `debug_dump_dict`
  --> $DIR/issue-42065.rs:21:5
   |
20 |     debug_dump_dict();
   |     --------------- value moved here
21 |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^ value used here after move
   |
note: closure cannot be invoked more than once because it moves the variable `dict` out of its environment
  --> $DIR/issue-42065.rs:16:29
   |
16 |         for (key, value) in dict {
   |                             ^^^^

error: aborting due to previous error

